@@ -35,7 +35,7 @@ nsvn__toggle_revtype (GtkWidget *widget,
                       gpointer *user_data);
 
 static int
-nsvn__destory_window (GtkWidget *widget,
+nsvn__destroy_window (GtkWidget *widget,
                       GladeXML *user_data)
 {
   GtkWidget *window;
@@ -197,10 +197,10 @@ nsvn_dlg_update (GtkWidget *widget,
 
   /* Connecting callbacks to widget. */
   g_signal_connect (G_OBJECT (window), "destroy",
-                    G_CALLBACK (nsvn__destory_window),
+                    G_CALLBACK (nsvn__destroy_window),
                     dlg_gui);
   g_signal_connect (G_OBJECT (cancel_btn), "clicked",
-                    G_CALLBACK (nsvn__destory_window),
+                    G_CALLBACK (nsvn__destroy_window),
                     dlg_gui);
   g_signal_connect (G_OBJECT (update_btn), "clicked",
                     G_CALLBACK (nsvn__update_wc),
